# Martina

./: .gitignore  LICENSE  PR_BODY.md  README.md  __main__.py  config.example.yml  martina.py  ordres_moviment.py  push_and_create_pr.sh  reconeixer_catala.py  requirements.txt  setup.cfg
.github/workflows/: build-and-publish.yml  deploy-to-pi.yml  publish-to-pypi.yml
martinaPI/: martina.py
