[metadata]
name = martinaPI
version = 0.1.1
description = Control a home robot Martina
author = Marçal Nebot
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md

[options]
py_modules = martinaPI
python_requires = >=3.7
include_package_data = True
