[metadata]
name = martinaPI
version = 0.1.3
description = Control a home robot Martina
author = Marçal Nebot
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
readme = README.md

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    requests==2.24.0
    face_recognition==1.3.0
    martypy==1.3
    numpy==1.19.2
    picamera==1.13
    Pillow==8.1.1
    pylgtv==0.1.9
    PyYAML==5.4.1

[options.entry_points]
console_scripts =
    martina = martinaPI.__main__:main
